/*
Copyright (C) BABEC. All rights reserved.
Copyright (C) THL A29 Limited, a Tencent company. All rights reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option java_package = "org.chainmaker.pb.consensus.tbft";
option go_package = "chainmaker.org/chainmaker/pb-go/v2/consensus/tbft";
package tbft;

import "common/block.proto";
import "common/request.proto";
import "common/rwset.proto";

// ValidatorSet represents the set of validators
message ValidatorSet {
  repeated string validators = 1;
}

// TBFTMsgType defines different type message in tbft
enum TBFTMsgType {
  MSG_PROPOSE   = 0;
  MSG_PREVOTE   = 1;
  MSG_PRECOMMIT = 2;
  MSG_STATE     = 3;
  MSG_FETCH_ROUNDQC = 4;
  MSG_SEND_ROUND_QC = 5;
}

message TBFTMsg {
  TBFTMsgType type = 1;
  bytes msg        = 2;
}

// Proposal defined a consesensus proposal which can 
// be gossiped to other node and can be serilized 
// for persistent store.
message Proposal {
  string voter                 = 1;
  uint64 height                 = 2;
  int32 round                  = 3;
  int32 pol_round              = 4;
  common.Block block                  = 5;
  common.EndorsementEntry endorsement = 6;
  map<string, common.TxRWSet> txs_rw_set =7;
  repeated Vote qc = 8;
}

// VoteType represents the type of vote
enum VoteType {
  VOTE_PREVOTE   = 0;
  VOTE_PRECOMMIT = 1;
}

// Vote represents a tbft vote
message Vote {
  VoteType type = 1;
  string voter  = 2;
  uint64 height  = 3;
  int32 round   = 4;
  bytes hash    = 5;
  common.EndorsementEntry endorsement = 6;
  repeated string invalidTxs = 7;
}

// BlockVotes represents votes as key-value form
message BlockVotes {
  map<string, Vote> votes = 1;
  uint64 sum               = 2;
}

// VoteSet represents a set of vote at `height` and `round`
message VoteSet {
  VoteType type                          = 1;
  uint64 height                           = 2;
  int32 round                            = 3;
  uint64 sum                              = 4;
  bytes maj23                            = 5;
  map<string, Vote> votes               = 6;
  map<string, BlockVotes> votes_by_block = 7;
}

// RoundVoteSet represents voteSet of a `round`
message RoundVoteSet {
  uint64 height       = 1;
  int32 round        = 2;
  VoteSet prevotes   = 3;
  VoteSet precommits = 4;
}

// HeightRoundVoteSet represents voteSet of a `height`
message HeightRoundVoteSet {
  uint64 height                           = 1;
  int32 round                            = 2; // max round
  map<int32, RoundVoteSet> round_vote_sets = 3;
}

// Step represents the step in a round 
enum Step {
	NEW_HEIGHT     = 0;
    NEW_ROUND      = 1;
	PROPOSE       = 2;
	PREVOTE       = 3;
	PREVOTE_WAIT   = 4;
	PRECOMMIT     = 5;
	PRECOMMIT_WAIT = 6;
	COMMIT        = 7;
}

// ConsensusState represents the state of tbft instance
message ConsensusState {
  string id                                = 1;
  uint64 height                             = 2;
  int32 round                              = 3; // max round
  Step step                                = 4; // step
  Proposal proposal                        = 5;
  Proposal verifing_proposal               = 6;
  Proposal locked_proposal                 = 7;
  Proposal valid_proposal                  = 8;
  HeightRoundVoteSet height_round_vote_set = 9;
}

// FetchRoundQC defined a fetch roundQC request which can
// be gossiped to other node
message FetchRoundQC {
  string id    = 1;
  uint64 height = 2;
  int32 round  = 3;
}

// RoundQC represents the max round of qc
message RoundQC {
  string id          = 1;
  uint64 height       = 2;
  int32 round        = 3;
  VoteSet qc  = 4;
}

// GossipState represents the state of tbft instance
message GossipState {
  string id                   = 1;
  uint64 height                = 2;
  int32 round                 = 3; // max round
  Step step                   = 4; // step
  bytes proposal              = 5;
  bytes verifing_proposal     = 6;
  RoundVoteSet round_vote_set = 7;
}

// TimeoutInfo represents the timeout event
message TimeoutInfo {
    int64 duration = 1;
    uint64 height = 2;
    int32 round = 3;
    Step step = 4;
}

// WalEntryType represents different types of entries in Wal
enum WalEntryType {
  TIMEOUT_ENTRY       = 0;
  PROPOSAL_ENTRY      = 1;
  VOTE_ENTRY          = 2;
  PROPOSAL_VOTE_ENTRY = 3;
}

// WalEntry represents the log entry in Wal
message WalEntry {
  uint64 height           = 1;
  // log entry type
  WalEntryType type       = 2;
  // data of entry
  bytes data              = 3;
}
